2008-06-26  Nicolas François  <nicolas.francois@centraliens.net>

	Prepare the 4.1.2.1 release
	* NEWS: set the release date.
	* man/po/*.po, po/*.po: Updated PO files.
	* configure.in: Set the version to 4.1.2.1.

2008-06-26  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/login.c: Fix an "audit log injection" vulnerability in
	login. This is similar to CVE-2008-1926 (util-linux-ng's login).
	This vulnerability makes it easier for attackers to hide
	activities by modifying portions of log events, e.g. by appending
	an addr= statement to the login name.
	* lib/prototypes.h: Added definition of AUDIT_NO_ID.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	Prepare the 4.1.2 release
	* NEWS: set the release date.
	* man/po/*.po, po/*.po: Updated PO files.
	* configure.in: Set the version to 4.1.2.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* po/Makevars, man/po/Makefile.in.in: Run msgmerge with
	--previous. (This requires gettext >= 0.16)

2008-05-24  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c (remove_tree): As we always use remove_tree
	followed by rmdir to remove the directory itself, delete also the
	root directory in remove_tree.
	* src/userdel.c, src/usermod.c: Do not call rmdir after
	remove_tree.

2008-05-24  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c (remove_tree): Make sure unlink is successful
	when removing files.

2008-05-24  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pwdcheck.c: Simply passwd_check since it's never used
	when configured with PAM support.

2008-05-24  Nicolas François  <nicolas.francois@centraliens.net>

	Fix compiler warnings:
	* libmisc/audit_help.c: Include prototypes.h to get the prototype
	of audit_help_open.
	* libmisc/salt.c: Use booleans instead of negating integers.
	* src/passwd.c: Declare the check_selinux_access prototype and